--- a/page2.html
+++ b/page2.html
@@ -30,6 +30,17 @@
                 Error nemo vero repellat sequi quis sit laborum numquam cupiditate temporibus architecto consectetur,
                  quam soluta itaque aspernatur nesciunt, dolorem perspiciatis placeat? Neque.</p>
 
+                
         </p>
+        <p>
+        <dl>
+            <blockquote>this is </blockquote>
+            <dt>Description Title</dt>
+            <dd>Here you can have your description text.</dd>
+            <dt>Title 1</dt>
+            <dd>Description text.</dd>
+          </dl>
+        </p>
+
 </body>
 </html>
