--- a/exercise1.html
+++ b/exercise1.html
@@ -7,23 +7,25 @@
     <title>exercise1</title>
 </head>
 <body>
-    <p> <img src="assets/images/download.png"> </p>
+     <img src="assets/images/download.png" alt="image 1;">
+     
    <ul>
     <li><a href="https://www.hamk.fi/applicants/?lang=en" target="_blank">study options</a></li>
     <li><a href="https://www.hamk.fi/global-education/?lang=en" target="_blank">Global education</a></li>
     
 </ul>
 <p>
-<img src="assets/images/etusivu-tammi-2023.jpg" alt="Photo info" height="400px" width="400px"/>>
-<img src="assets/images/RUN-EU_banneri_2400x500_muokattu-scaled.jpg" alt="Photo info" height="400px" width="1100px"/>></p>
+<img src="assets/images/etusivu-tammi-2023.jpg" alt="Photo info" height="400" width="400">
+<img src="assets/images/RUN-EU_banneri_2400x500_muokattu-scaled.jpg" alt="Photo info" height="400" width="1100">
+</p>
 <h1> Apply to HAMK</h1>
 <ul>
     <li><a href="https://www.hamk.fi/information-for-new-hamk-students/?lang=en" target="_blank">INFORMATION FOR NEW STUDENTS</a></li>
     <li><a href="https://www.hamk.fi/applicants/?lang=en" target="_blank">Study options</a></li>
 
 </ul>
-<p>
-<img src="assets/images/etusivu-tammi-2023.jpg" alt="Photo info" height="400px" width="400px" style="float:right; margin-right: 15px;"/>></p>
+
+<img src="assets/images/etusivu-tammi-2023.jpg" alt="Photo info" height="400" width="400" style="float:right; margin-right: 15px;">
 <h2>NEWS FROM HAMK</h2>
 <h3>You can apply to HAMK:s Master:s degree programmes conducted in English in the joint application to higher education in January. 
     The application period starts on 4 January and closes on 18 January 2023 (4.-8.2023) 3:00 pm (Finnish time</h3>
