--- a/exercise2.html
+++ b/exercise2.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
+        <ul>
         <li><a href="https://jesseaaltonen.github.io/aaltonenjesse1/" target="_blank">Home</a></li>
-        <li><a href="C:\Users\jesse\OneDrive - Hämeen ammattikorkeakoulu\web kehitys\aaltonenjesse1\aboutus.html" target="_blank">About us</a></li>
-        <li><a href="C:\Users\jesse\OneDrive - Hämeen ammattikorkeakoulu\web kehitys\aaltonenjesse1\project.html" target="_blank">Projects</a></li>
+        <li><a href="aboutus.html" target="_blank">About us</a></li>
+        <li><a href="project.html" target="_blank">Projects</a></li>
+    </ul>
     </header>
-    
-    <img src="assets/images/Audi-Logo_2016.svg.png" alt="Photo info" height="250" width="250" style="float:right; margin-right: 15px;">
+    <article>
+    <img src="assets/images/Audi-Logo_2016.svg.png" alt="Photo info" height="250" width="450" style="float:right; margin-right: 15px; margin-left: 150px;">
     <h1> Audi</h1>
 
     <p>
@@ -21,7 +23,7 @@
         The origins of the company are complex, going back to the early 20th century and the initial enterprises (Horch and the Audiwerke) founded by engineer August Horch (1868 1951); and two other manufacturers (DKW and Wanderer), leading to the foundation of Auto Union in 1932.
         
     </p>
-
+</article>
     <address> "Hämeen ammattikorkeakoulu HAMK PL 230 13101 Hämeenlinna"</address>
 </body>
 </html>
