--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Jesse Aaltonen</h1>
     <h2>List of Exercises</h2>
     <ul>
-        <li><a href="Exercise1.html"> Exercise1</a></li>
-        <li><a href="Exercise2.html"> Exercise2</a></li>
-        <li><a href="Exercise3.html"> Exercise3</a></li>
-        <li><a href="Exercise4.html"> Exercise4</a></li>
-        <li><a href="Exercise5.html"> Exercise5</a></li>
+        <li><a href="exercise1.html"> Exercise1</a></li>
+        <li><a href="exercise2.html"> Exercise2</a></li>
+        <li><a href="exercise3.html"> Exercise3</a></li>
+        <li><a href="exercise4.html"> Exercise4</a></li>
+        <li><a href="exercise5.html"> Exercise5</a></li>
 
     </ul>
 </body>
