--- a/exercise4.html
+++ b/exercise4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercise4</title>
-    <link href="css\style1.css" rel="stylesheet" type="text/css">
+    <link href="css/style1.css" rel="stylesheet" type="text/css">
     <style>
         
         body {
@@ -39,7 +39,7 @@
       </header>
       <div class="main">
         <sidebar style="flex-grow:2;">
-            sidebar <br> <br> sidebar<br><br> sidebar <br> <br> sidebar <br> <br> sidebar
+            sidebar <br> <br> <br> sidebar<br><br> <br>sidebar <br> <br> <br>sidebar <br> <br> <br> sidebar
         </sidebar>
 
 
